5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4070/executions/1602_2895.log
== SUBMITION (2019-03-20 19:27:57) 
-- CODE:
var=float(input("jogo:20.00"))
total=((8*var)+40.00
print(total)


-- EXECUTION TIME:
0.133421
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 3
    print(total)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:29:29) 
-- CODE:
var=float(input("jogo:"))
jogo=20.00
total=((8*var)+40.00
print(total)


-- EXECUTION TIME:
0.182273
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 4
    print(total)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:32:30) 
-- CODE:
varf=(float(input("frete:")))

-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:35:10) 
-- CODE:
varf=(float(input("frete:")))
varj=(float(input("jogo:")))
varq=(int(input("quantidade:")))

total=((varq*varj)+varf
print=(total)

-- EXECUTION TIME:
0.167939
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 6
    print=(total)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:35:25) 
-- CODE:
varf=(float(input("frete:")))
varj=(float(input("jogo:")))
varq=(int(input("quantidade:")))

total=((varq*varj)+varf)
print(total)

-- EXECUTION TIME:
0.181854
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 3, in <module>
    varq=(int(input()))
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:35:28) 
-- CODE:
varf=(float(input("frete:")))
varj=(float(input("jogo:")))
varq=(int(input("quantidade:")))

total=((varq*varj)+varf)
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    varq=(int(input()))
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:36:20) 
-- CODE:
varf=(float(input("frete:")))
varj=(float(input("jogo:")))
varq=(int(input("quantidade:")))

total=((varq*varj)+varf)
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    varq=(int(input()))
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:36:23) 
-- CODE:
varf=(float(input("frete:")))
varj=(float(input("jogo:")))
varq=(int(input("quantidade:")))

total=((varq*varj)+varf)
print(total)

-- EXECUTION TIME:
0.254714
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 3, in <module>
    varq=(int(input()))
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:37:09) 
-- CODE:
varf=(float(input("frete:")))
varj=(float(input("jogo:")))
varq=(int(input("quantidade:")))

total=((varq*varj)+varf)

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    varq=(int(input()))
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:37:47) 
-- CODE:
varf=(float(input("frete:")))
varj=(float(input("jogo:")))
varq=(int(input("quantidade:")))

total=((varq*varj)+varf)

print(total)

-- EXECUTION TIME:
0.206736
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 3, in <module>
    varq=(int(input()))
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:38:31) 
-- CODE:
varf=float(input("frete:"))
varj=float(input("jogo:"))
varq=int(input("quantidade:"))

total=((varq*varj)+varf)

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    varq=int(input())
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:38:49) 
-- CODE:
varf=float(input("frete:"))
varj=float(input("jogo:"))
varq=int(input("quantidade:"))

total=((varq*varj)+varf)

print(total)

-- EXECUTION TIME:
0.184129
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 3, in <module>
    varq=int(input())
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:39:32) 
-- CODE:
varf=float(input("frete: "))
varj=float(input("jogo: "))
varq=int(input("quantidade: "))

total=((varq*varj)+varf)

print(total)

-- EXECUTION TIME:
0.203634
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 3, in <module>
    varq=int(input())
ValueError: invalid literal for int() with base 10: '78.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:39:34) 
-- CODE:
varf=float(input("frete: "))
varj=float(input("jogo: "))
varq=int(input("quantidade: "))

total=((varq*varj)+varf)

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    varq=int(input())
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:41:04) 
-- CODE:
varq=int(input("quantidade: "))
varj=float(input("jogo: "))
varf=float(input("frete: "))

total=((varq*varj)+varf)

print(total)

-- EXECUTION TIME:
0.159335
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
